--- a/Program/Program/Program.csproj
+++ b/Program/Program/Program.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoordinatesAreaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoordinatesAreaForm.Designer.cs">
+      <DependentUpon>CoordinatesAreaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,6 +59,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screeneng.cs" />
+    <EmbeddedResource Include="CoordinatesAreaForm.resx">
+      <DependentUpon>CoordinatesAreaForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
